gitops/single-service/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-ingress
  annotations:
    target: /
spec:
  ingressClassName: nginx-internal
  rules:
    - host: localhost
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  name: http
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  name: http
